<resources>
    <string name="app_name">Smart Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="passwort_confirm">Passwort bestätigen</string>
    <string name="login">Login</string>
    <string name="statisticTab">Statistik</string>
    <string name="homeTab">Home</string>
    <string name="profileTab">Profile</string>
    <string name="signup">signup</string>
    <string name="signout">Sign off</string>
    <string name="add_new_location">Neuen Standort hinzufügen</string>
    <string name="edit_location">Standort bearbeiten</string>
    <string name="remove_location">Standort entfernen</string>
    <string name="really_delete_location">Möchten Sie diesen Standort wirklich entfernen?</string>
    <string name="name">Name</string>
    <string name="plz">PLZ</string>
    <string name="country">Land</string>
    <string name="city">Stadt</string>
    <string name="devices">Geräte</string>
    <string name="producer">Stromerzeuger</string>
    <string name="no_producer">Noch keine Stromerzeuger vorhanden.\nBitte hinzufügen</string>
    <string name="no_devices">Noch keine Geräte vorhanden.\n Bitte hinzufügen</string>
    <string name="no_location">Noch kein Standort vorhanden.\nBitte hinzufügen</string>
    <string name="no_produer_no_devices">Bitte fügen Sie zuerst Stromerzeuger und Geräte hinzu</string>
    <string name="adding_device">Neues Gerät hinzufügen</string>
    <string name="type">Typ</string>
    <string name="manufacturer">Hersteller</string>
    <string name="fill_in_all">Bitte füllen Sie alle Felder aus</string>
    <string name="adding_producer">Neuen Stromerzeuger hinzufügen</string>
    <string name="add">hinzufügen</string>
    <string name="done">fertig</string>
    <string name="state">status</string>
    <string name="run">Einschalten</string>
    <string name="stop">Ausschalten</string>
    <string name="edit">Bearbeiten</string>
    <string name="delete">löschen</string>
    <string name="remove">entfernen</string>
    <string name="save">speichern</string>
    <string name="yes">ja</string>
    <string name="no">nein</string>
    <string name="back">zurück</string>

    <string name="event">
        {\"sunrise\":\"1597723220\",\"sunset\":\"1597774231\",\"dt\":\"1597731178\",\"description\":\"few clouds\"}
    </string>
    <string name="photovoltaikid">PhotovoltaikID</string>
    <string name="add_photovoltaik">Photovoltaik hinzufügen</string>
    <string name="benutzerspezifischer_name">Benutzerspezifischer Name</string>
    <string name="seriennummer">Seriennummer</string>
    <string name="title_activity_edit_location">EditLocationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="geraete">Geräte:</string>
    <string name="photovoltaik">Photovoltaik:</string>
    <string name="show">anzeigen</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>


</resources>